<resources>
    <string name="app_name">DOITtest</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="description">description</string>
    <string name="hashtag">#hashtag</string>
    <string name="not_valid">not valid data</string>
    <string name="enter_carrect_email">enter a valid email address</string>
    <string name="password_hint">between 4 and 10 alphanumeric characters</string>
    <string name="login_success">Login success</string>
    <string name="signup_success">Signup success</string>
</resources>
